# orderedset.py

./: .gitignore  Justfile  README.md  _typos.toml  pyproject.toml
src/techcable/orderedset/: __init__.py  __main__.py  _orderedset.py
tests/: test_simple.py
