[project]
name = "techcable.orderedset"
description = "A simple and efficient OrderedSet implementation"
authors = [{ name = "Techcable" }]
license = "MIT OR APACHE-2.0"
keywords = ["orderedset", "ordereddict", "set"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = []
dynamic = ["version"]

[dependency-groups]
mypy = ["mypy~=1.0", {include-group = "typing"}]
test = ["pytest~=8.3", "pytest-sugar~=1.0"]
typing = ["typing-extensions~=4.12"]
dev = [{include-group = "mypy"}, {include-group = "test"}]

[project.urls]
Source = "https://github.com/Techcable/orderedset.py"

[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.setuptools_scm]
# NOTE: Using a version file avoids some overhead
#
# This file is explicitly ignored by version control.
write_to = "src/techcable/orderedset/_version.py"

